# attestinfer

./: .gitignore  Dockerfile  Makefile  README.md  RESULTS.md  THREAT_MODEL.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
attestinfer/: __init__.py  attest.py  canonical.py  cli.py  corpus.py  ed25519.py  merkle.py  model.py  signing.py  transcript.py
docs/: ARCHITECTURE.md
examples/: bench.py  demo.py
tests/: test_attest.py  test_cli.py  test_ed25519.py  test_merkle.py
