[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "attestinfer"
version = "0.1.0"
description = "Cryptographic provenance for grounded AI inference: prove a specific local model + private corpus produced an answer, verifiable without revealing either."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["attestation", "provenance", "merkle", "ed25519", "ai", "audit", "rag", "compliance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: Developers",
]
dependencies = []  # zero required dependencies

[project.optional-dependencies]
fast = ["pynacl>=1.5"]           # optional Ed25519 cross-check / speedup
dev = ["pytest>=7", "pynacl>=1.5"]

[project.scripts]
attestinfer = "attestinfer.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/attestinfer"
Source = "https://github.com/cognis-digital/attestinfer"

[tool.setuptools.packages.find]
include = ["attestinfer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
